<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/subject_courses"
        style="@style/courses_item"
        android:layout_weight="3"
        android:padding="18dp"
        tools:text="@string/subject" />

    <TextView
        android:id="@+id/code_courses"
        style="@style/courses_item"
        android:layout_weight="1"
        tools:text="@string/code" />

    <TextView
        android:id="@+id/teacher_courses"
        style="@style/courses_item"
        android:layout_weight="2"
        tools:text="@string/teacher" />

    <TextView
        android:id="@+id/type_courses"
        style="@style/courses_item"
        android:layout_weight="1"
        tools:text="@string/type" />

</LinearLayout>