<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.chalkpad.DashboardActivity"
    android:background="@color/background">

    <LinearLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:id="@+id/profile"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:textAlignment="center"
            tools:text="Ayush Sood"/>
        <Button
            android:id="@+id/att"
            style="@style/dashboard"
            android:text="@string/attendance" />

        <Button
            android:id="@+id/timetable"
            style="@style/dashboard"
            android:text="@string/table" />

        <Button
            android:id="@+id/courses"
            style="@style/dashboard"
            android:text="@string/resources" />

        <Button
            android:id="@+id/marks"
            style="@style/dashboard"
            android:text="@string/marks" />


    </LinearLayout>
</ScrollView>
